--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 chrono = "~0.4.26"
 error-stack = "~0.3.1"
+kinded = "~0.0.3"
 once_cell = "~1.18.0"
 rand = "~0.8.5"
 
