--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-chrono = "~0.4.26"
-error-stack = "~0.4.0"
+chrono = "~0.4.27"
+error-stack.workspace = true
 kinded = "~0.3.0"
 once_cell = "~1.18.0"
 rand = "~0.8.5"
