--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -9,6 +9,7 @@ error-stack.workspace = true
 kinded = "~0.3.0"
 once_cell = "~1.18.0"
 rand = "~0.8.5"
+sealed = "~0.5.0"
 
 [dev-dependencies]
 pretty_assertions = "~1.4.0"
